--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotfiles/.vim/bundle/omnisharp-vim"]
 	path = dotfiles/.vim/bundle/omnisharp-vim
 	url = https://github.com/OmniSharp/omnisharp-vim
+[submodule "dotfiles/.vim/bundle/nerdtree"]
+	path = dotfiles/.vim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree
