--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -12,5 +12,6 @@
     }
   },
   "rpc.ignoreWorkspaces": ["ling"],
-  "rpc.workspaceElapsedTime": true
+  "rpc.workspaceElapsedTime": true,
+  "rpc.hideStartupMessage": true
 }
