--- a/.local/share/kxmlgui5/konsole/konsoleui.rc
+++ b/.local/share/kxmlgui5/konsole/konsoleui.rc
@@ -1,6 +1,6 @@
 <?xml version='1.0'?>
 <!DOCTYPE gui SYSTEM 'kpartgui.dtd'>
-<gui name="konsole" version="13">
+<gui name="konsole" version="17">
  <MenuBar>
   <Menu name="file">
    <text>File</text>
@@ -32,6 +32,8 @@
    <Separator/>
    <Action name="detach-tab"/>
    <Action name="detach-view"/>
+   <Action name="save-layout"/>
+   <Action name="load-layout"/>
    <Separator/>
    <DefineGroup name="session-view-operations"/>
   </Menu>
@@ -48,6 +50,10 @@
    <Action name="configure-notifications"/>
    <Action name="configure-settings"/>
   </Menu>
+  <Menu name="plugins">
+   <text>Plugins</text>
+   <ActionList name="plugin-submenu"/>
+  </Menu>
   <Menu name="help">
    <text>Help</text>
   </Menu>
@@ -60,15 +66,15 @@
   <Action name="split-view-top-bottom"/>
  </ToolBar>
  <ActionProperties>
-  <Action name="clone-tab" shortcut=""/>
-  <Action name="focus-view-above" shortcut="Ctrl+Shift+Up; Ctrl+J"/>
-  <Action name="focus-view-below" shortcut="Ctrl+Shift+Down; Ctrl+K"/>
-  <Action name="focus-view-left" shortcut="Ctrl+Shift+Left; Ctrl+H"/>
-  <Action name="focus-view-right" shortcut="Ctrl+Shift+Right; Ctrl+L"/>
-  <Action name="help_contents" shortcut=""/>
-  <Action name="last-used-tab" shortcut="Ctrl+PgDown"/>
-  <Action name="last-used-tab-reverse" shortcut="Ctrl+PgUp"/>
-  <Action name="next-tab" shortcut="Shift+Right; Ctrl+Tab"/>
-  <Action name="previous-tab" shortcut="Shift+Left; Ctrl+Shift+Tab"/>
+  <Action shortcut="" name="clone-tab"/>
+  <Action shortcut="Ctrl+Shift+Up; Ctrl+J" name="focus-view-above"/>
+  <Action shortcut="Ctrl+Shift+Down; Ctrl+K" name="focus-view-below"/>
+  <Action shortcut="Ctrl+Shift+Left; Ctrl+H" name="focus-view-left"/>
+  <Action shortcut="Ctrl+Shift+Right; Ctrl+L" name="focus-view-right"/>
+  <Action shortcut="" name="help_contents"/>
+  <Action shortcut="Ctrl+PgDown" name="last-used-tab"/>
+  <Action shortcut="Ctrl+PgUp" name="last-used-tab-reverse"/>
+  <Action shortcut="Shift+Right; Ctrl+Tab" name="next-tab"/>
+  <Action shortcut="Shift+Left; Ctrl+Shift+Tab" name="previous-tab"/>
  </ActionProperties>
 </gui>
