--- a/.local/share/kxmlgui5/konsole/konsoleui.rc
+++ b/.local/share/kxmlgui5/konsole/konsoleui.rc
@@ -1,6 +1,6 @@
 <?xml version='1.0'?>
 <!DOCTYPE gui SYSTEM 'kpartgui.dtd'>
-<gui name="konsole" version="17">
+<gui version="19" name="konsole">
  <MenuBar>
   <Menu name="file">
    <text>File</text>
@@ -43,6 +43,7 @@
    <DefineGroup name="session-settings"/>
    <Action name="manage-profiles"/>
    <Action name="show-menubar"/>
+   <Action name="window-colorscheme-menu"/>
    <Separator/>
    <Action name="view-full-screen"/>
    <Separator/>
