--- a/.config/conky/Eltanin/Eltanin.conf
+++ b/.config/conky/Eltanin/Eltanin.conf
@@ -18,7 +18,7 @@ conky.config = {
   gap_x = 30,
   gap_y = 60,
   maximum_width = 230,
-  minimum_height = 710,
+  minimum_height = 730,
   minimum_width = 230,
   
 -- Text settings --
@@ -65,7 +65,7 @@ conky.config = {
 
 conky.text = [[
 ${execi 300 ~/.config/conky/Eltanin/scripts/weather.sh}\
-${image ~/.config/conky/Eltanin/res/bw.png -p 0,0 -s 230x710}\
+${image ~/.config/conky/Eltanin/res/bw.png -p 0,0 -s 230x730}\
 ${image ~/.config/conky/Eltanin/res/prof.jpeg -s 90x90 -p 16,370}\
 ${offset 15}${voffset 15}${color}${font Economica:bold:size=11}CPU${alignr 15}${color}${cpu cpu0}%
 ${offset 15}${color2}${cpugraph cpu0 40,198}${font}
@@ -85,13 +85,14 @@ ${offset 118}${voffset 3}${color}${font Economica:size=11}${execi 1200 lsb_relea
 ${offset 118}${voffset 3}${color}${font Economica:size=11}${uptime}
 ${offset 118}${voffset -2}${color}${font Economica:size=11}-----------------
 ${offset 118}${voffset 0}${color2}${font Economica:size=11}${if_running mpd}${font Feather:size=11} ${font Economica:size=11}${mpd_title}${else}No music played${endif}${font}
-${offset 15}${voffset 30}${font feather:size=25}${execi 15 ~/.config/conky/Eltanin/scripts/weather-text-icon}${goto 70}${color}${font Economica:size=25}${execi 100 cat ~/.cache/weather.json | jq '.main.temp' | awk '{print int($1+0.5)}'}°C
+${offset 15}${voffset 30}${font feather:size=25}${execi 15 ~/.config/conky/Eltanin/scripts/weather-text-icon}${goto 70}${color}${font Economica:size=25}${execi 100 cat ~/.cache/weather.json | jq '.main.temp' | awk '{print int($1+0.5)}'}°F
 ${alignr 15}${voffset -55}${color}${font Economica:size=10}${execi 100 cat ~/.cache/weather.json | jq -r '.name'}
 ${alignr 15}${voffset 0}${color}${font Economica:size=10}${execi 100 cat ~/.cache/weather.json | jq -r '.weather[0].description' | sed "s|\<.|\U&|g"}
 ${offset 15}${voffset 20}${color2}${font Feather:size=25}${goto 70}${color}${font Economica:size=25}${execi 60 du -hs ~/.local/share/Trash/files | cut -b 1-4}
 ${alignr 15}${voffset -55}${color}${font Economica:size=10}Trash
 ${alignr 15}${voffset 0}${color}${font Economica:size=10}${execi 60 ls ~/.local/share/Trash/files | wc -l} files inside
 ${offset 15}${voffset 20}${color2}${font Feather:size=25}${goto 70}${color}${font Economica:size=25}${execi 10 ~/.config/conky/Eltanin/scripts/temp}
-${alignr 15}${voffset -55}${color}${font Economica:size=10}${execi 6000 lscpu | grep "Model name:" | awk -F' ' '{print $3$4}'}
-${offset 15}${voffset 20}${color2}${font Feather:size=25}${goto 70}${voffset -5}${color}${font Economica:size=20}${execi 5 ~/.config/conky/Eltanin/scripts/volume percent}${goto 130}${color2}${font Feather:size=22}${alignr 13}${voffset -2}${color}${font Economica:size=20}${execi 5 ~/.config/conky/Eltanin/scripts/brightness}
+${alignr 15}${voffset -55}${color}${font Economica:size=10}${execi 6000 lscpu | grep "Model name:" | awk -F' ' '{print $3}'}
+${alignr 15}${voffset 0}${color}${font Economica:size=10}${execi 6000 lscpu | grep "Model name:" | awk -F' ' '{print $4" "$5" "$6}'}
+${offset 15}${voffset 25}${color2}${font Feather:size=25}${goto 70}${voffset -5}${color}${font Economica:size=20}${execi 5 ~/.config/conky/Eltanin/scripts/volume percent}${goto 130}${color2}${font Feather:size=22}${alignr 13}${voffset -2}${color}${font Economica:size=20}${execi 5 ~/.config/conky/Eltanin/scripts/brightness}
 ]]
