--- a/.config/conky/Eltanin/Eltanin.conf
+++ b/.config/conky/Eltanin/Eltanin.conf
@@ -77,7 +77,7 @@ ${offset 15}${voffset 0}${color}${font Economica:size=11}Home :${alignr 15}${col
 ${offset 15}${color2}${fs_bar 5,198 /home}
 ${offset 15}${voffset 10}${color}${font Economica:size=11}Download${alignr 10}${color}${downspeed wlp4s0}
 ${offset 15}${voffset 3}${color}${font Economica:size=11}Upload${alignr 10}${color}${upspeed wlp4s0}
-${offset 15}${voffset 3}${color}${font Economica:size=11}Hostname${alignr 10}${color}${execi 60 hostname -i}
+${offset 15}${voffset 3}${color}${font Economica:size=11}Hostname${alignr 10}${color}${execi 60 hostname -i | awk '{print $1}'}
 ${offset 15}${voffset 3}${color}${font Economica:size=11}User Active${alignr 20}${color}${user_number}
 ${offset 15}${voffset 3}${color}${font Economica:size=11}Wi-fi${alignr 10}${color}${execi 10 ~/.config/conky/Eltanin/scripts/ssid}
 ${offset 118}${voffset 30}${color}${font Economica:size=11}${execi 1200 whoami | sed "s|\<.|\U&|g"}
