--- a/.config/conky/Eltanin/Eltanin.conf
+++ b/.config/conky/Eltanin/Eltanin.conf
@@ -44,7 +44,7 @@ conky.config = {
   own_window_class = 'Conky',
   own_window_argb_visual = true,
   own_window_argb_value = 180,
-  own_window_type = 'dock',
+  own_window_type = 'desktop',
   own_window_transparent = false,
   own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
   stippled_borders = 0,
